fix card-text-overflow

--- a/scss/_main-courses.scss
+++ b/scss/_main-courses.scss
@@ -9,7 +9,6 @@
     border: none;
 
     img {
-      display: block;
       width: 60%;
     }
   }
@@ -41,6 +40,14 @@
     text-align: center;
   }
 
+  .card-text-overflow {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+  }
+
   .btn-card-primary {
     color: $white_color;
     font-size: 18px;
@@ -59,10 +66,9 @@
     text-align: center;
     -webkit-text-stroke: 2px;
     padding-bottom: 15px;
+
     .courses {
-      border-bottom-width: 3px;
-      border-bottom-color: $card-title_color;
-      border-bottom-style: solid;
+      border-bottom: 3px solid $card-title_color;
       border-bottom-left-radius: 3px;
       border-bottom-right-radius: 3px;
     }
@@ -100,7 +106,7 @@
 
 @media (max-width: 769px) and (min-width: 576px) {
   .card-img-top {
-    height: 131px;
+    height: 131px !important;
   }
 
   .card-body {
@@ -110,6 +116,22 @@
 
     .card-text {
       font-size: 14px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-height: 18px;
+      -webkit-line-clamp: 4;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+    }
+
+    .card-text-overflow {
+      font-size: 14px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-height: 18px;
+      -webkit-line-clamp: 4;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
     }
 
     .btn-card-primary {
@@ -120,7 +142,6 @@
 }
 
 @media (max-width: 415px) {
-
   .main-courses {
     margin-top: 231px;
   }
